Adjusted styling on header, article card, font used on webpage, sidebar color, background color. Centered search bar in header and fixed issue with dropdowns appearing behind other content in the left_column class.

--- a/TemplateWebpage/src/assets/css/mainpage.css
+++ b/TemplateWebpage/src/assets/css/mainpage.css
@@ -12,25 +12,40 @@
     top: 10px;
 }
 
+body, html, #app {
+    height: 100%;
+    min-height: 100%;
+    background-color: #333333;
+    font-family: 'Roboto';
+}
+
+#app {
+    display: flex;
+    flex-flow: column;
+}
+
 .body {
     display: flex;
-    height: 100%;
     width: 100%;
+    background-color: #333333;
+    flex: 1 1 auto;
 }
 
 .left_column {
-    width: 20%;
     height: 100%;
-    overflow: hidden;
+    flex: 0 0 200px;
 }
 
 .middle_column {
-    width: 60%;
+    height: 100%;
+    flex: 1 1 auto;
+    display: flex;
 }
 
 .right_column {
-    width: 20%;
+    height: 100%;
     float: right;
+    flex: 0 0 200px;
 }
 
 li {
